--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
       }
     </style>
     
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9MCKHZ4Y1D"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9MCKHZ4Y1D');
+</script>
+    
     <!-- Meta Pixel Code -->
 <script>
   !function(f,b,e,v,n,t,s)
