--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">""Videos Rentables es muy bueno, lo hago todas las noches y estoy ganando buen dinero cada semana""🤑</td>
+                      <td class="fb-comments-comment-text">""Videos Rentablles es muy bueno, lo hago todas las noches y estoy ganando buen dinero cada semana""🤑</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -133,7 +133,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">""Gracias a Videos Rentables hoy gano 2 mil dólares al mes, sólo puedo agradecerles""</td>
+                      <td class="fb-comments-comment-text">""Gracias a Videos Rentablles hoy gano 2 mil dólares al mes, sólo puedo agradecerles""</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
